# rag_platform

./: README.md  pyproject.toml
data/: example1.txt  example2.txt  example3.txt
src/: main.py
src/core/: prompt.py  rag_system.py  retriever.py
src/model/: __init__.py  doc.py  knowledge.py
src/processors/: __init__.py  abc.py  doc_processor.py  excel_processor.py  markdown_processor.py  text_processor.py
src/server/: server.py
src/store/: __init__.py  doc.py  knowledge_base.py
