[project]
name = "qanything-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "llama-index>=0.14.0",
    "llama-index-embeddings-dashscope>=0.4.1",
    "llama-index-llms-openai-like>=0.5.1",
    "python-docx>=1.2.0",
]
