[project]
name = "qanything-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.116.1",
    "jieba>=0.42.1",
    "llama-index>=0.14.0",
    "llama-index-embeddings-dashscope>=0.4.1",
    "llama-index-llms-openai-like>=0.5.1",
    "llama-index-readers-file>=0.5.4",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-vector-stores-elasticsearch>=0.5.1",
    "nltk>=3.9.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
]
